Correctif - Ajout scrollbar tableau de température

--- a/public/styles.css
+++ b/public/styles.css
@@ -6,27 +6,19 @@
 
 body {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
 
     height: 100vh;
     width: 100vw;
-
     font-family: Arial, sans-serif;
-}
 
-/*---------------------------------------------*/
-.container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
     padding: 30px;
     gap: 20px;
 }
 
+/*---------------------------------------------*/
 .temperature {
     display: flex;
-    flex: 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -59,9 +51,9 @@ body {
 
 /*---------------------------------------------*/
 .table-container{
-    flex: 2;
-    overflow-y: scroll;
+    display: flex;
     border: 1px solid black;
+    overflow-y: scroll;
 }
 
 table {
